# example-app

./: .terraform.lock.hcl  app.auto.tfvars  appspec.yaml  backend.tf  ci.nix  default.nix  flake.nix  main.tf  shell.nix  taskdef.json  variables.tf
.github/workflows/: build.yml
backend/: appspec.yaml  cabal.project  default.nix  taskdef.json
backend/server/: example-app-server.cabal
backend/server/app/: Main.hs
backend/server/tests/: Main.hs
backend/tf/: .terraform.lock.hcl  app.auto.tfvars  backend.tf  main.tf  outputs.tf  secrets.auto.tfvars  tfstate_backend.tf
backend/tf/modules/alb/: main.tf  outputs.tf
backend/tf/modules/alb/modules/terraform-aws-alb/: main.tf
backend/tf/modules/ecs/: outputs.tf  variables.tf
backend/tf/modules/ecs/modules/terraform-aws-ecs-alb-service-task/: main.tf
backend/tf/modules/network/: outputs.tf
backend/tf/modules/pipeline/: main.tf  variables.tf
modules/alb/: main.tf  outputs.tf  variables.tf
modules/ecs/: main.tf
modules/network/: main.tf  variables.tf
modules/pipeline/: main.tf  variables.tf
nix/: sources.json
