cabal-version:      2.4
name:               example-app-server
version:            0.1.0.0

author:             Richard Wallace
maintainer:         rwallace@thewallacepack.net

executable example-app-server
  main-is:          Main.hs

  build-depends:
    , base ^>=4.14.3.0
    , http-types
    , wai
    , warp

  hs-source-dirs:   app
  default-language: Haskell2010
