cabal-version:      2.4
name:               example-app-server
version:            0.1.0.0

author:             Richard Wallace
maintainer:         rwallace@thewallacepack.net

common options
  default-language: Haskell2010
  build-depends:
    , base ^>=4.14.3.0

executable example-app-server
  import:           options
  main-is:          Main.hs
  hs-source-dirs:   app

  build-depends:
    , http-types
    , wai
    , warp


test-suite example-app-server-tests
  import:           options
  main-is:          Main.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

